[gd_scene load_steps=4 format=3 uid="uid://cswb8bilfttaf"]

[ext_resource type="StyleBox" uid="uid://chvlw8pqinkx3" path="res://resources/styles/menu_panel.tres" id="1_vqruc"]
[ext_resource type="Script" path="res://scripts/ui/menu_singleplayer.gd" id="1_ymg1g"]
[ext_resource type="Theme" uid="uid://bycwepbj8cxa4" path="res://resources/styles/theme.tres" id="3_2ysfl"]

[node name="SingleplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymg1g")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 261.0
offset_top = 86.0
offset_right = -261.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_vqruc")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35
metadata/_edit_use_anchors_ = true

[node name="Vertical" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 35

[node name="Top" type="HBoxContainer" parent="Panel/MarginContainer/Vertical"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Top"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "SINGLEPLAYER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Middle" type="VBoxContainer" parent="Panel/MarginContainer/Vertical"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Middle/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "SELECT_SAVE"

[node name="OptionButton" type="OptionButton" parent="Panel/MarginContainer/Vertical/Middle/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
allow_reselect = true

[node name="OrLabel" type="Label" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "OR"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Middle/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "CREATE_SAVE"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/Vertical/Middle/VBoxContainer2"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="Panel/MarginContainer/Vertical/Middle/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "NAME"
max_length = 20

[node name="NewSave" type="Button" parent="Panel/MarginContainer/Vertical/Middle/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("3_2ysfl")
theme_override_font_sizes/font_size = 25
text = "ADD"

[node name="ErrorMessage" type="Label" parent="Panel/MarginContainer/Vertical/Middle"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.97, 0.0776, 0.0776, 1)
theme_override_font_sizes/font_size = 22
text = "SELECT_SAVE"

[node name="Bottom" type="HBoxContainer" parent="Panel/MarginContainer/Vertical"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="Back" type="Button" parent="Panel/MarginContainer/Vertical/Bottom"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("3_2ysfl")
theme_override_font_sizes/font_size = 25
text = "BACK"

[node name="Play" type="Button" parent="Panel/MarginContainer/Vertical/Bottom"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("3_2ysfl")
theme_override_font_sizes/font_size = 25
text = "PLAY"

[connection signal="button_up" from="Panel/MarginContainer/Vertical/Middle/VBoxContainer2/HBoxContainer/NewSave" to="." method="_on_new_save_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/Vertical/Bottom/Back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/Vertical/Bottom/Play" to="." method="_on_play_button_up"]
